Fixed scrollbar after closing modal
2. Fixed menu and share options in my profile page
3. Added share to option on home page
4. Disabled delete option for trade post

--- a/src/components/show_post/style.css
+++ b/src/components/show_post/style.css
@@ -16,4 +16,5 @@
 .show-post-subheader .page-name {
   font-weight: 500;
   font-size: var(--font-size);
+  padding-top: 2px;
 }
